Fixed movie info modal title spacing

--- a/src/scss/idiotbox.scss
+++ b/src/scss/idiotbox.scss
@@ -477,8 +477,6 @@ div.ib-moverename-inputs-container {
 div.ib-moviemodal-contents {
     div.mm-title {
         border-bottom: 1px solid lightgray;
-        line-height: 2em;
-        height: 2em;
         font-size: 1.2em;
         font-weight: bold;
         padding-left: 8px;
